# ai-development-os

./: .gitignore  README.md  pyproject.toml
config/: ci_policy.yaml  default_routing.yaml  orchestration.yaml  projects.example.yaml  provider_pins.example.json  providers.example.yaml  repair_rounds.yaml  risk_levels.yaml  token_budgets.yaml
demo_projects/calculator-demo/: README.md  pyproject.toml
demo_projects/calculator-demo/calculator/: ops.py
demo_projects/calculator-demo/tests/: test_ops.py
docs/: AI_OS_OPEN_SOURCE_INTEGRATION_MASTER_BLUEPRINT.md  ARCHITECTURE.md  CHATGPT_GITHUB_CONNECTOR_SETUP.md  CONSTITUTION.md  CONSTITUTIONAL_COURT_DESIGN.md  MODEL_ROLES.md  OPEN_SOURCE_ADOPTION_ROADMAP.md  OPEN_SOURCE_REFERENCE_ASSESSMENT.md  PHASE_B3_3_MEMORY_SERVICE_DESIGN.md  PROJECT_BOUNDARIES.md  PROJECT_CHRONICLE.md  PROVIDER_AUTH_NONINTERACTIVE_STANDARD.md  PROVIDER_READINESS_STANDARD.md  REPORTING_STANDARD.md  ROADMAP.md  ROUND_3A_SAFE_EXECUTION_DESIGN.md  ROUND_3B_PROVIDER_ADAPTER_DESIGN.md  ROUND_3C_BOUNDED_ORCHESTRATION_DESIGN.md  ROUND_4A_LOCAL_CI_DESIGN.md  ROUND_4A_LOCAL_CI_HARDENING_DESIGN.md  ROUND_4C_HIGH_QUALITY_REPORTING_DESIGN.md  ROUND_4D1_1_CLI_AMBIGUITY_RESOLUTION_DESIGN.md  ROUND_4D1_2_AUTH_AND_NONINTERACTIVE_DESIGN.md  ROUND_4D1_3_CODEX_HEADLESS_PROVIDER_DESIGN.md  ROUND_4D1_PROVIDER_READINESS_DESIGN.md  ROUND_4E_BOUNDARY_ENFORCEMENT_DESIGN.md  ROUND_4F_CI_ERGONOMICS_DESIGN.md  ROUND_4G_CI_TARGETED_SELECTION_DESIGN.md  ROUND_4H_MD_RENDERING_PARITY_DESIGN.md  SECURITY_MODEL.md  SELF_BUILD_STRATEGY.md  SHARED_MEMORY_DESIGN.md  SHARED_MEMORY_IMPLEMENTATION_PLAN.md  SHARED_MEMORY_SQLITE_PERSISTENCE.md  ZERO_CLICK_LIMITATIONS.md
exports/: AI_Development_OS_Project_Chronicle.md  CLAUDE_HANDOFF_PROGRESS.md
schemas/: behavioral_report.schema.json  canonical_report.schema.json  ci_run.schema.json  ci_run_comparison.schema.json  ci_stage_result.schema.json  ci_targeted_run.schema.json  decision.schema.json  evidence_item.schema.json  execution_envelope.schema.json  implementation_report.schema.json  orchestration_completion_summary.schema.json  orchestration_event.schema.json  orchestration_record.schema.json  orchestration_round_evidence.schema.json  plan.schema.json  pr_validation_summary.schema.json  provider_readiness.schema.json  provider_result.schema.json  review.schema.json  task.schema.json
templates/: behavioral_report.md  canonical_report.md  implementation_report.md  implementation_spec.md  (+2 more)
(+141 files in other folders)
