[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dev-os"
version = "0.8.7"
description = "AI Development Operating System — Round 4A/4E/4F local CI suite plus run-history/compare hardening"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "AI Development OS" }]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]
cov = [
    "coverage>=7",
]

[project.scripts]
ai-dev-os = "ai_dev_os.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
